<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/one_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:background="@color/beige_background"
        android:orientation="vertical"
        app:cardElevation="4dp">

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="360dp"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/delete_button"
            android:visibility="visible"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/nameCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_dynamic_neutral10"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_to_buy"
            android:textColor="@color/material_dynamic_neutral10" />

        <TextView
            android:id="@+id/whereToBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_dynamic_neutral10" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/material_dynamic_neutral10" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_dynamic_neutral10" />

    </LinearLayout>

</androidx.cardview.widget.CardView>